--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ content-section {
 
 .content-text {
     color: rgb(54, 54, 54);
-    line-height: 3vh;
+    line-height: 1lh;
     margin-left: 1vw;
     font-size: 90%;
 }
